--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL=https://dynamicdns.park-your-domain.com/update?host=www&domain=allometrics.io&password=12344&ip=120.154.11.11" />
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-    </main>
-	<script src="index.js"></script>
-  </body>
+<html>
+ 
+<head>
+    <title>
+          Getting Clients IP
+      </title>
+    <style>
+        p,
+        h1 {
+            color: green;
+        }
+    </style>
+ 
+    <script src=
+"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+ 
+    <script>
+        /* Add "https://api.ipify.org?format=json" to 
+        get the IP Address of user*/
+        $(document).ready(()=>{
+            $.getJSON("https://api.ipify.org?format=json",
+            function (data) {
+ 
+                // Displayin IP address on screen
+                $("#gfg").html(data.ip);
+            })
+        });
+    </script>
+</head>
+ 
+<body>
+    <center>
+        <h1>
+              GeeksforGeeks
+          </h1>
+        <h3>
+              Public IP Address of user is:
+          </h3>
+        <p id="gfg"></p>
+ 
+    </center>
+</body>
+ 
 </html>
